--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField 'String', 'API_BASE_URL', '"https://arcane-force-382110.uc.r.appspot.com/"'
+        buildConfigField 'String', 'API_BASE_URL', '"https://secret-walker-389309.et.r.appspot.com"'
     }
 
     buildTypes {
@@ -69,9 +69,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
-    //implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     implementation "androidx.room:room-runtime:2.5.1"
-    //implementation 'androidx.room:room-paging:2.6.0-alpha01'
     implementation 'androidx.room:room-ktx:2.5.1'
     kapt "androidx.room:room-compiler:2.5.1"
 
