--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_MAPS_API_KEY" />
+            android:value="AIzaSyDaV21gg3zojdwcz01xLETQbBc2ugDThlI" />
 
         <activity
             android:name=".ui.login.LoginActivity"
